# Hetu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COMMITTERS.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  hetu.exp  init.sh
cmake/: config.example.cmake
cmake/Modules/: FindCUB.cmake  FindTHRUST.cmake
examples/auto_parallel/: .gitignore
examples/cnn/: README.md  local_s1.yml  main.py  run_tf_horovod.py  tf_main.py  torch_main.py
examples/ctr/: .gitignore  README.md  data_utils.py  make_scripts.py  run_compressed.py  run_compressed_forward.py  run_hetu.py  run_tf_horovod.py  run_tf_local.py  run_tf_parallax.py  tf_launch_server.py
examples/gnn/: README.md  run_dist.py  run_single.py
examples/moe/: README.md  test_mnist.py  test_moe_base.py  test_moe_hash.py  test_moe_ktop1.py  test_moe_sam.py  test_moe_top.py
examples/nlp/: .gitignore  data_load.py  prepare_data.py  processBertData.py  tf_transformer.py  train_hetu_transformer.py  train_tf_transformer.py
examples/rec/: .gitignore  config.py  hetu_main.py  hybrid_ncf.sh  ps_ncf.sh  run_compressed.py  run_hetu.py  run_parallax.py  torch_main.py  torch_ncf.py
examples/rnn/: README.md  main.py  run_tf_horovod.py  tf_launch_server.py  tf_launch_worker.py  tf_main.py  torch_main.py  worker_conf0.json  worker_conf1.json
examples/runner/: README.md  local_ps.yml  remote_allreduce.yml  remote_ps.yml  run_mlp.py  run_wdl.py
ps-lite/: .gitignore  CMakeLists.txt  README.md
ps-lite/include/common/: dmlc_base.h  logging.h  sarray.h  shared_mutex.h  thread_pool.h  thread_safe_hash_map.h
ps-lite/include/ps/: base.h  kvapp.h  partitioner.h  ps.h  range.h
ps-lite/include/ps/internal/: assign_op.h  customer.h  env.h  message.h  parallel_kv_match.h  parallel_sort.h  postoffice.h  threadsafe_pqueue.h  threadsafe_queue.h  utils.h  van.h
ps-lite/include/ps/psf/: PSFunc.h  cachetable.h  dense.h  misc.h  preduce.h  serializer.h  sparse.h  ssp.h
ps-lite/include/ps/server/: PSFHandle.h  kvserver.h  optimizer.h  param.h  preduce_handler.h  ssp_handler.h
ps-lite/include/ps/worker/: PSAgent.h  callback_store.h  hetu_binding.h  kvworker.h  worker.h
ps-lite/proto/: meta.proto
ps-lite/src/: PSFhandle_embedding.cc  PSFunc.cc  customer.cc  hetu_binding.cc  ibverbs_van.h  network_utils.h  p3_van.h  postoffice.cc  preduce_handler.cc  python_binding.cc  resender.h  thread_pool.cc  van.cc  worker.cc  zmq_van.h
python/: runner.py
python/graphboard/: graph2fig.py  index.html
python/hetu/: __init__.py  _base.py  context.py  cstable.py  data.py  dataloader.py  distribute.py  initializers.py  launcher.py  logger.py  lr_scheduler.py  memory_pool.py  metrics.py  ndarray.py  optimizer.py  preduce.py  profiler.py  random.py  stream.py  transforms.py
src/: CMakeLists.txt
src/common/: c_runtime_api.cc  c_runtime_api.h  cpu_device_api.cc  cpu_device_api.h  cuda_device_api.h  device_api.h  dispatch.h  dlarray.h  random.cc  random.h  runtime_base.h
src/communication/: CMakeLists.txt  c_communication_nthread.cc  mpi_communication.cc  mpi_nccl_communication.cu  nccl_communication.cu
src/cuda_common/: cuda_device_api.cc  gpu_chunk.cc  gpu_functions.cuh  gpu_reduce.h  gpu_runtime.cc  gpu_runtime.h
src/dnnl_ops/: AddConst.cpp  AddElewise.cpp  ArraySet.cpp  AvgPool.cpp  BatchNorm.cpp  BroadcastTo.cpp  Concat.cpp  Conv2d.cpp  DivideConst.cpp  DivideElewise.cpp  Dropout.cpp  EmbeddingLookup.cpp  Gelu.cpp  Initializers.cpp  MatrixMult.cpp  MaxPool.cpp  MultiplyConst.cpp  MultiplyElewise.cpp  Opposite.cpp  Optimizers.cpp  Pad.cpp  ReduceIndexedSlice.cpp  ReduceSumAxisZero.cpp  Relu.cpp  Reshape.cpp  Sigmoid.cpp  Softmax.cpp  SoftmaxCrossEntropy.cpp  Sqrt.cpp  Tanh.cpp  Transpose.cpp  UniqueIndices.cpp  dnnl_runtime.cc  dnnl_runtime.h
src/header/: mpi_communication.h  mpi_nccl_communication.h  nccl_communication.h  types.h
src/hetu_cache/: CMakeLists.txt
src/hetu_cache/include/: binding.h  cache.h  embedding.h  hetu_client.h  lfu_cache.h  lfuopt_cache.h  lru_cache.h  unqiue_tools.h
src/hetu_cache/src/: cache.cc  embedding.cc  hetu_client.cc  lfu_cache.cc  lfuopt_cache.cc  lru_cache.cc  python_api.cc
src/memory_pool/: BFC_allocator.cc  BFC_allocator.h  allocator.cc  allocator.h
src/ops/: Abs.cu  AddConst.cu  AddElewise.cu  Addmm.cu  Arange.cu  Argmax.cu  ArgmaxPartial.cu  Argsort.cu  ArrayLazyCallback.cu  ArraySet.cu  AsStrided.cu  AssignWithIndexedSlices.cu  AutoDimOps.cu  AvgPool.cu  Baddbmm.cu  BatchMatrixMult.cu  BinaryCrossEntropy.cu  BinaryCrossEntropyWithLogits.cu  Bool.cu  Broadcast.cu  BroadcastShape.cu  Clamp.cu  Clip.cu  Clone.cu  CompressedEmbedding.cu  Concat.cu  Concatenate.cu  ConstPow.cu  Conv2d.cu  Conv2dBroadcast.cu  Conv2dReduceSum.cu  CrossEntropy.cu  CrossEntropySparse.cu  CuSparseCsrmm.cu  CuSparseCsrmv.cu  CudnnAvgPool.cu  CudnnBn.cu  CudnnConv2d.cu  CudnnConv2dAddBias.cu  CudnnDropout.cu  (+95 more)
tests/: README.md  balanced.py  get_gpu_memory.py  test_comm.py  test_datatransfer_op.py  test_dnnl_op.py  test_embedding_op.py  test_gpu_initializers.py  test_gpu_op.py  test_ha2agather.py  test_lr_scheduler.py  test_moe_base.py  test_moe_hash.py  test_moe_ktop1.py  test_moe_top.py  test_nccl_bandwidth.py  test_ops.py  test_ops_speed.py  test_optimizer.py  test_profiler.py  test_ps_preduce.py  test_reorder_lookup.py  test_resnet_block.py  test_simple_version_ops.py  test_sparse.py  test_sparse_op.py  test_split.py  test_sum_sparse_grad.py  test_transformer_ops.py  test_unique.py  tester.py  torch_balance.py
tests/hetu_cache/: hetu_cache_config.yml  hetu_cache_test.py
tests/mytest/: broad.py  clone.py  compare_k.py  compare_num_experts.py  compare_num_tokens.py  do_expert.py  do_k.py  do_token.py  draft.py  env.sh  experts  index_mask.py  k  k_outcome  max.py  minus.py  num_of_experts_outcome  scatter.py  test.py  tokens  topk.py  transpose.py
tests/onnx/: README.md  cnn_hetu_onnx_tf.py  cnn_tf_onnx_hetu.py  dnn_hetu_onnx_tf.py  dnn_tf_onnx_hetu.py  rnn_hetu_onnx_tf.py  rnn_tf_onnx_hetu.py  test_cnn.py  test_mlp.py  test_nodes.py
tests/pstests/: local_s2_w1.yml  local_s2_w2.yml  test_apis.py  (+4 more)
(+1145 files in other folders)
